Added input field for each dropdown box

--- a/index.html
+++ b/index.html
@@ -8,34 +8,41 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Convert</h1>
-    <div class="dropdown">
-        <div class="select">
-            <span class="selected">EUR</span>
-            <div class="caret"></div>
+    
+    <div class="currency">
+        <input type="text" class="input-field-1">
+        
+        <div class="dropdown">
+            <div class="select">
+                <span class="selected">EUR</span>
+                <div class="caret"></div>
+            </div>
+            <ul class="menu">
+                <li>USD</li>
+                <li>JPY</li>
+                <li>BGN</li>
+                <li>CZK</li>
+                <li class="active">EUR</li>
+            </ul>
         </div>
-    <ul class="menu">
-        <li>USD</li>
-        <li>JPY</li>
-        <li>BGN</li>
-        <li>CZK</li>
-        <li class="active">EUR</li>
-    </ul>
     </div>
 
-    <h1>Convert to</h1>
-    <div class="dropdown">
-        <div class="select">
-            <span class="selected">USD</span>
-            <div class="caret"></div>
+    <div class="currency">
+        <input type="text" class="input-field-2">
+
+        <div class="dropdown">
+            <div class="select">
+                <span class="selected">USD</span>
+                <div class="caret"></div>
+            </div>
+            <ul class="menu">
+                <li class="active">USD</li>
+                <li>JPY</li>
+                <li>BGN</li>
+                <li>CZK</li>
+                <li>EUR</li>
+            </ul>
         </div>
-    <ul class="menu">
-        <li>EUR</li>
-        <li>JPY</li>
-        <li>BGN</li>
-        <li>CZK</li>
-        <li class="active">USD</li>
-    </ul>
     </div>
 
 </body>
