--- a/Scratch/index2.html
+++ b/Scratch/index2.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="experiment.js" defer></script>
 </head>
 <body>
     <input type="text" id="input-field-1" onInput="getValue()">
